--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(FactoryModelTest LANGUAGES CXX)
+project(SrcModule LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -11,13 +11,13 @@ add_executable(Executable.out main.cpp)
 target_include_directories(
     Executable.out
     PRIVATE
-    ${SMAKE_CURRENT_SOURCE_DIR}/../lib
+    ${CMAKE_CURRENT_SOURCE_DIR}/../lib
 )
 
 target_link_directories(
     Executable.out   
     PRIVATE
-    ${SMAKE_CURRENT_SOURCE_DIR}/../lib
+    ${CMAKE_CURRENT_SOURCE_DIR}/../lib
 )
 
 target_link_libraries(Executable.out lib)
