--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(FactoryModelLibrary LANGUAGES CXX)
+project(LibraryModule LANGUAGES CXX)
 
 
 add_library(lib STATIC 
